# BitCalling-lib

./: .gitignore  CMakeLists.txt  README.md
include/: bc_atomic.h  bc_audio.h  bc_core.h  bc_crypto.h  bc_error.h  bc_log.h  bc_memory.h  bc_mesh.h  bc_net.h  bc_platform.h  bc_rtp.h  bc_sim.h  bc_time.h
src/: CMakeLists.txt  main.c
src/audio/: bc_audio.c
src/core/: bc_core.c  bc_error.c  bc_log.c  bc_memory.c  bc_time.c
src/crypto/: bc_crypto.c
src/mesh/: bc_mesh.c
src/net/: bc_net.c
src/rtp/: bc_rtp.c
src/sim/: bc_sim.c
tests/: CMakeLists.txt  test_core.c
